fixed link spacing on home menu

--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,7 @@ a:link, a:visited {
 	color: white;
 	font-size: 0.9rem;
 	text-align:center;
+	margin-top: 1.15rem;
 }
 
 p,
